# ctypes_ndarray

./: CMakeLists.txt  LICENSE  README.md  setup.py
cndarray/: __init__.py  ndarray.py
src/: NdArray.cpp  NdArray.h
